# manycat

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_CONTEXT.md  components.json  docker-compose.yml  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts
.claude/: settings.json
.playwright-mcp/: page-2026-07-16T13-05-59-247Z.yml  page-2026-07-16T13-06-07-810Z.yml  page-2026-07-16T13-06-12-750Z.yml  page-2026-07-16T13-06-30-987Z.yml  page-2026-07-16T13-07-34-033Z.yml  page-2026-07-16T13-07-45-897Z.yml  page-2026-07-16T13-08-16-633Z.yml  page-2026-07-16T13-09-17-956Z.yml  page-2026-07-16T13-09-41-795Z.yml  page-2026-07-16T13-10-16-885Z.yml  page-2026-07-16T13-28-10-223Z.yml  page-2026-07-16T13-28-22-466Z.yml  page-2026-07-16T13-28-29-429Z.yml  page-2026-07-16T13-28-37-758Z.yml  page-2026-07-16T13-28-45-688Z.yml  page-2026-07-16T13-29-00-685Z.yml  page-2026-07-16T13-29-15-313Z.yml  page-2026-07-16T13-30-32-495Z.yml  page-2026-07-16T13-30-39-106Z.yml  page-2026-07-16T13-30-45-314Z.yml  (+12 more)
agent-harness/: .env.example  Dockerfile  pyproject.toml
agent-harness/programming_agent/: __init__.py  __main__.py  config.py  harness.py  jobs.py  prose_tools.py  scaffold_fallback.py  server.py  tool_loop.py
agent-harness/programming_agent/prompts/: assembler.py  sections.py
agent-harness/programming_agent/tools/: __init__.py  browser.py  code_graph.py  compose.py  deploy_debug.py  edit_apply.py  filesystem.py  research.py  test_code_graph.py  test_compose.py  test_edit_apply.py
docs/: chat-shell-nav.md  (+4 more)
(+158 files in other folders)
