[project]
name = "programming-agent"
version = "0.1.0"
description = "LangChain harness for a Claude Code-style programming agent"
requires-python = ">=3.9"
dependencies = [
  "langchain>=0.3.14",
  "langgraph>=0.2.60",
  "langchain-core>=0.3.28",
  "langchain-openai>=0.2.14",
  "langchain-anthropic>=0.3.1",
  "python-dotenv>=1.0.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
ollama = ["langchain-ollama>=0.2.2"]
all = ["programming-agent[ollama]"]

[project.scripts]
programming-agent = "programming_agent.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["programming_agent*"]
